# polygon-intersection

./: .gitignore  LICENSE  README.md  make_vc2010.bat
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
